jitfailure-dolfin_expression_a44371360b71923aeb355f8689d532b0/error.log
/tmp/tmphuuiuk3t/dolfin_expression_a44371360b71923aeb355f8689d532b0.cpp: In member function 'virtual void dolfin::dolfin_expression_a44371360b71923aeb355f8689d532b0::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmphuuiuk3t/dolfin_expression_a44371360b71923aeb355f8689d532b0.cpp:61:23: error: expected primary-expression before 'if'
   61 |           values[0] = if x[0] < 1 ? x[0];
      |                       ^~
